2000-12-06  Ken Raeburn  <raeburn@mit.edu>

	* commands.c (tn): Local var "user" should be volatile.
	* main.c (main): Local var "argp" should be volatile.

2000-11-01  Ezra Peisach  <epeisach@mit.edu>

	* configure.in: Use AC_CHECK_HEADER and AC_FUNC_VFORK instead of
	AC_HEADER_CHECK and AC_VFORK.

2000-05-11  Nalin Dahyabhai  <nalin@redhat.com>

	* commands.c (makeargv): Don't overflow buffer "saveline".
	(tn): Don't overflow buffer "_hostname".
	(cmdrc): Don't overflow buffer "m1save".
	* externs.h: Include the size of "tline", so that we can check for
	overflows elsewhere.
	* main.c(main, tn370): Don't overflow buffer "tline".
	* utilities.c (SetNetTrace): Don't overflow buffer "NetTraceFile".

2000-04-28  Nalin Dahyabhai  <nalin@redhat.com>

	* commands.c (cmdrc): Don't overflow buffer "rcbuf".
	* tn3270.c (settranscom): Don't overflow buffer "transcom".

2000-02-24  Ezra Peisach  <epeisach@mit.edu>

	* configure.in: Remove dependency on libdes425 when krb4 support
		is not compiled in.

2000-02-16  Ezra Peisach  <epeisach@mit.edu>

	* commands.c: Move include of libtelnet/auth.h earlier to provide
	prototype for auth_cmd.

1999-10-26  Wilfredo Sanchez  <tritan@mit.edu>

	* Makefile.in: Clean up usage of CFLAGS, CPPFLAGS, DEFS, DEFINES,
	LOCAL_INCLUDES such that one can override CFLAGS from the command
	line without losing CPP search patchs and defines. Some associated
	Makefile cleanup.

1999-07-26  Tom Yu  <tlyu@mit.edu>

	* telnet.c (telnet): Fix typo in error message, via
	schwim@whatmore.Stanford.EDU

1999-04-13    <tytso@rsts-11.mit.edu>

	* configure.in: Check for setupterm() in libncurses in addition to
		libcurses.  (Will be needed for Linux/Redhat 6.0)

1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)

1998-10-26  Marc Horowitz  <marc@mit.edu>

	* commands.c: remove calls to setuid(getuid()).  This looks like